oxiplate-derive/tests/config/crates/.template/tests/broken/config.stderr
error: Failed to parse `/oxiplate.toml`: Unexpected token found
 --> tests/broken/config.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Oxiplate` (in Nightly builds, run with -Z macro-backtrace for more info)
